# hackathons

./: .gitignore
client/: package.json  tailwind.config.js
client/pages/: chat.js  connect.js  index.js
client/pages/chat/: [roomName].js
client/src/: theme.js  websocket.js
client/src/components/: Copyright.js  Layout.js
client/src/components/chat/: App.js  Chat.js  Messages.js
client/src/components/index/: Banner.js
client/styles/: Chat.module.css
salve/: .gitignore  README.md  Vagrantfile
salve/client/: tailwind.config.js
salve/client/pages/: connect.js  index.js
salve/client/pages/chat/: [roomName].js
salve/client/src/components/: Copyright.js  Footer.js  GoogleFonts.js  Layout.js
salve/client/src/components/chat/: Messages.js
salve/client/src/components/index/: Banner.js
salve/server/: manage.py
salve/server/chat/: urls.py  views.py
salve/server/chat/migrations/: 0001_initial.py  0002_auto_20210403_1231.py  0003_auto_20210403_1700.py
salve/tools/: run-dev
salve/tools/Vagrant/: setup-deps
salve/tools/shell/: env-vars
server/: Procfile  pyproject.toml  requirements.txt
server/chat/: admin.py  consumers.py  managers.py  models.py  urls.py  utils.py  views.py
server/chat/migrations/: 0004_auto_20210403_1856.py
server/salve/: asgi.py  settings.py  urls.py  wsgi.py
server/salve/api/: graphql_config.py
tools/Vagrant/: bootstrap  setup-deps
tools/shell/: env-vars
