[tool.poetry]
name = "salve"
version = "0.1.0"
description = ""
authors = [
    "IgnisDa <ignisda2002@gmail.com>",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
Django = {extras = ["argon2"], version = "^3.1.4"}
psycopg2-binary = "^2.8.6"
django-cors-headers = "^3.6.0"
channels = "^3.0.3"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
gunicorn = "^20.1.0"
ariadne = "^0.13.0"
python-dateutil = "^2.8.1"
channels-redis = "^3.2.0"
dj-database-url = "^0.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
django-extensions = "^3.1.0"
black = {version = "^20.8b1", allow-prereleases = true}
mypy = "^0.800"
jupyterlab = "^3.0.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89
